--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include('_navigation'); %>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+
 <div id="searh-display" >
     <div id="input">
         <form action="/create-habit" method="POST" class="signin-form row justify-content-center">
@@ -47,3 +49,4 @@
         <% } %>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
