adding more style

--- a/views/_navigation.ejs
+++ b/views/_navigation.ejs
@@ -1,7 +1,7 @@
 <div id="navigation">
     <!--  Navigation  -->
     <div id="wellcome">
-            Wellocme <%= user %>
+            Wellcome <%= user %>
     </div>
 
     <div id="nav-bar">
