--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1743,12 +1743,13 @@ table{
       color: #6c757d;
       opacity: 1; }
     .form-control:disabled, .form-control[readonly] {
-      background-color: #e9ecef;
+      
       opacity: 1; }
   
   select.form-control:focus::-ms-value {
     color: #495057;
-    background-color: #fff; }
+    
+  }
   
   .form-control-file,
   .form-control-range {
@@ -8292,7 +8293,7 @@ table{
   
   .heading-section {
     font-size: 28px;
-    color: #32376a ; }
+    color: #f8f9fa ; }
   
   .img {
     background-size: cover;
