--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1707,6 +1707,7 @@ table{
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
+    background-color: rgb(255 255 255 / 15%);
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
